<resources>
    <string name="app_name">My Diary</string>
    <string name="create_new_diary">Create Diary</string>
    <string name="update_diary">Update Diary</string>
    <string name="title">Title</string>
    <string name="created">Created:</string>
    <string name="dev_name">Bugase Nabase Razak</string>
    <string name="dev_contact">+233 553 18 1665</string>
    <string name="dev_email">nabase1.nr@gmail.com</string>
    <string name="version_num">Version 1.0</string>
    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="back_up">Back Up</string>
    <string name="main_menu">Main Menu</string>
    <string name="diary_deleted">Diary Deleted!</string>
    <string name="success_msg">Saved Successfully!</string>
    <string name="diary_updated">Diary Updated!</string>
    <string name="error_msg">Problem Updating</string>
    <string name="read_error">Can\'t Read Pdf</string>
    <string name="listen_msg">Diary is listening to you…</string>
    <string name="diary_stopped">Diary Stopped Listening</string>
    <string name="secure_your_diary_with_four_digit_pin">Secure Diary With A Pin</string>
    <string name="enter_four_digit_pin">Enter Pin</string>
    <string name="enter_pin">Enter Your Pin</string>
    <string name="at_least_4_digit">PIN must be at least 4 digit</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="done">Confirm</string>
    <string name="incorrect_pin">Incorrect Pin!</string>
    <string name="change_pin">Change Pin</string>
    <string name="mismatch_error">PIN do not match!, Re Enter</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_header">Permission</string>
    <string name="dialog_info">My Diary need to access your microphone before you can use this feature</string>
    <string name="select_font">Select Font</string>
</resources>