<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/secure_screen_bg"
        tools:context=".LockScreen">

        <EditText
            android:id="@+id/editTextPin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/edit_text_roundborders"
            android:ems="10"
            android:hint="@string/enter_four_digit_pin"
            android:inputType="numberPassword"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:text="dfsdfsdfdfasdf"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextPin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextPin"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="daadfafsdfsdfds" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_roundborders"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/editTextPin"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextPin" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_roundborders"
            android:text="@string/back"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/editTextPin"
            app:layout_constraintTop_toBottomOf="@+id/editTextPin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="205dp"
            android:layout_marginEnd="206dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="180dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
