<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_font"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="305dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Default" />

            <RadioButton
                android:id="@+id/radioMonospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mono space" />

            <RadioButton
                android:id="@+id/radioSanSarif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Livingston SanSarif" />

            <RadioButton
                android:id="@+id/radioAlleyster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alleyster" />

            <RadioButton
                android:id="@+id/radioDephiana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dephiana" />

            <RadioButton
                android:id="@+id/radioRaphtalia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Raphtalia" />

            <RadioButton
                android:id="@+id/radioMontag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Montag" />

            <RadioButton
                android:id="@+id/radioThinkDreams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Think Dream" />


        </RadioGroup>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/dialog_ok"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:text="@string/dialog_cancel"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/button_confirm"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/button_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

